[package]
name = "volunteers-shifts"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

# Web app crates
rocket = { version = "0.5.0-rc.4", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["handlebars"] }

# Cloud crates
shuttle-rocket = "0.32.0"
shuttle-runtime = "0.32.0"
shuttle-secrets = "0.32.0"
shuttle-shared-db = { version = "0.32.0", features = ["postgres"] }

# Csv files crate
csv = "1.2.2"

# HTTP client crate
reqwest = { version = "0.11", features = ["json"] }

# Crate to manage a PostgreS database
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres", "time"] }

# Crate to manage JSON files
serde = "1.0.148"

# Crate to handle errors
anyhow = "1.0.75"

# Time crate
chrono = "0.4.31"

# Timezone crate
chrono-tz = { version = "0.8.4", features = [ "filter-by-regex" ] }

# Web server crate
tokio = "1.26.0"
